--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy | SignsTogether</title>
-    <link rel="stylesheet" href="/privacy-policy/privacy-policy-style.css">
+    <link rel="stylesheet" href="/privacy-policy/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="icon" href="/assets/favicon.ico">
 </head>
@@ -95,6 +95,6 @@
         </div>
     </footer>
 
-    <script src="/privacy-policy/privacy-policy-main.js"></script>
+    <script src="/privacy-policy/main.js"></script>
 </body>
 </html>
