--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                     <h4>Legal</h4>
                     <ul class="footer-links">
                         <li><a href="#">Terms of Service</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="https://signstogether.com/privacy-policy/">Privacy Policy</a></li>
                         <li><a href="#">Contact Us</a></li>
                     </ul>
                 </div>
