--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -33,10 +33,12 @@
         }
         
         .privacy-footer {
-            background: #2c3e50;
-            color: white;
-            padding: 25px 0;
-            text-align: center;
+            list-style: none;
+            margin-bottom: 12px;
+            color: #bbb;
+            transition: var(--transition);
+            color: var(--white);
+            padding-left: 5px;
         }
     </style>
 </head>
