--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -33,12 +33,10 @@
         }
         
         .privacy-footer {
-            list-style: none;
-            margin-bottom: 12px;
-            color: #bbb;
-            transition: var(--transition);
-            color: var(--white);
-            padding-left: 5px;
+            background: #2c3e50;
+            color: white;
+            padding: 25px 0;
+            text-align: center;
         }
     </style>
 </head>
